--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ erl_crash.dump
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
 
+.env
+
 # Temporary files, for example, from tests.
 /tmp/
 
